# k1x-cam

./: CMakeLists.txt  Config.in  asr-cam.mk
demo/: CMakeLists.txt  camtest.sh  config.c  config.h  cpp_common.c  cpp_common.h  dual_pipeline_capture_test.c  dual_pipeline_capture_test.h  gst_cam_api.c  gst_cam_api.h  gstreamer_api.h  main.c  online_pipeline_test.c  online_pipeline_test.h  sdktest.sh  sensor_common.c  sensor_common.h  tuning_server.c  tuning_server.h  viisp_common.c  viisp_common.h
demo/cfgs/0/: camtest_sensor0_mode0.json  camtest_sensor0_mode1.json  camtest_sensor0_mode2.json  camtest_sensor1_mode0.json  camtest_sensor2_mode0.json  sdktest_sensor0_mode0.json  sdktest_sensor0_mode1.json  sdktest_sensor0_mode2.json  sdktest_sensor1_mode0.json  sdktest_sensor2_mode0.json
demo/cfgs/1/: camtest_main_aux.json  camtest_main_front.json  sdktest_main_aux.json  sdktest_main_front.json
demo/cfgs/2/: camtest_sensor0_mode0.json  camtest_sensor1_mode0.json  camtest_sensor2_mode0.json  sdktest_sensor0_mode0.json  sdktest_sensor1_mode0.json  sdktest_sensor2_mode0.json
demo/cfgs/3/: camtest_sensor0_mode0.json  camtest_sensor1_mode0.json  camtest_sensor2_mode0.json  sdktest_sensor0_mode0.json  sdktest_sensor1_mode0.json  sdktest_sensor2_mode0.json
demo/cfgs/4/: camtest_sensor0_mode0_nv12.json  camtest_sensor0_mode0_p010.json  camtest_sensor0_mode0_p210.json  camtest_sensor0_mode0_rgb565.json  camtest_sensor0_mode0_rgb888.json  camtest_sensor0_mode0_y210.json  sdktest_sensor0_mode0_nv12.json  sdktest_sensor0_mode0_p010.json  sdktest_sensor0_mode0_p210.json  sdktest_sensor0_mode0_rgb565.json  sdktest_sensor0_mode0_rgb888.json  sdktest_sensor0_mode0_y210.json
demo/cfgs/5/: camtest_1920x1080_raw12.json  sdktest_1920x1080_raw12.json
demo/cfgs/6/: camtest_1920x1080.json  sdktest_1920x1080.json
demo/cfgs/files/: 1920x1080_raw12_long_packed.vrf
demo/include/: bufferPool.c  bufferPool.h  cam_interface.h  dmabufheapAllocator.c  dmabufheapAllocator.h
demo/include/dmabufheap/: BufferAllocator.h  BufferAllocatorWrapper.h  dmabufheap-defs.h
demo/utils/: cam_list.c  cam_list.h  cam_log.h  condition.c  condition.h
sensors/: CMakeLists.txt  cam_asr_otp_handle.c  cam_asr_otp_handle.h  cam_log.h  cam_sensor_uapi.h  cam_sensors_module.c  cam_sensors_module.h  cam_sensors_module_list.h  cam_spm_otp_handle.c  cam_spm_otp_handle.h  camera_base.h
sensors/flash/: aw36515_led.c  cam_led.h  flash_aw36515.h
sensors/include/: asr_cam_sensors.h  asr_comm_sensors.h  spm_cam_sensors.h  spm_comm_sensors.h
sensors/module/: dove_struct_to_settingfile.py
sensors/module/common/: common_FlickerSetting.h  common_rawhdr_default_setting.h
sensors/module/gc2375h_asr/: gc2375h_asr.c  gc2375h_asr.h  gc2375h_asr_rear_secondary_cpp_snapshot_setting.h  gc2375h_asr_rear_secondary_isp_setting.h  gc2375h_asr_rear_secondary_isp_setting_video.h  gc2375h_asr_setting.h
sensors/module/gc2375h_spm/: gc2375h_spm.c  gc2375h_spm.h  gc2375h_spm_rear_secondary_cpp_nightshot_setting.h  gc2375h_spm_rear_secondary_isp_setting_video.h  gc2375h_spm_setting.h
sensors/module/gc5035_asr/: gc5035_asr.c  gc5035_asr.h  gc5035_asr_rear_secondary_isp_setting.h  gc5035_asr_setting.h
sensors/module/gc5035_spm/: gc5035_spm.c  gc5035_spm.h  gc5035_spm_rear_secondary_cpp_preview_setting.h  gc5035_spm_rear_secondary_isp_setting_video.h  gc5035_spm_setting.h
sensors/module/imx135_asr/: imx135_asr.c  imx135_asr.h  imx135_asr_rear_primary_isp_setting.h  imx135_asr_rear_primary_isp_setting_video.h  imx135_asr_setting.h
sensors/module/imx135_spm/: imx135_spm.c  imx135_spm.h  imx135_spm_rear_primary_cpp_nightshot_setting.h  imx135_spm_rear_primary_cpp_preview_setting.h  imx135_spm_rear_primary_cpp_video_setting.h  imx135_spm_rear_primary_isp_setting_video.h  imx135_spm_setting.h
sensors/module/imx219_spm/: imx219_spm.c  imx219_spm.h  imx219_spm_setting.h
sensors/module/os05a10_asr/: os05a10_asr.c  os05a10_asr.h  os05a10_asr_setting.h
sensors/module/os05a10_spm/: os05a10_spm.c  os05a10_spm.h  os05a10_spm_setting.h
sensors/module/ov08d10_asr/: ov08d10_asr.c  ov08d10_asr.h  ov08d10_asr_front_cpp_nightshot_setting.h  ov08d10_asr_front_isp_setting.h  ov08d10_asr_front_isp_setting_video.h  ov08d10_asr_setting.h
sensors/module/ov08d10_spm/: ov08d10_spm.c  (+4 more)
sensors/sensor/: cam_sensor.c  cam_sensor.h  gc2375h_sensor.c  gc5035_sensor.c  imx135_sensor.c  imx219_sensor.c  os05a10_sensor.c  ov08d10_sensor.c  ov13b10_sensor.c  ov16a10_sensor.c  ov8856_sensor.c  s5k5e3yx_sensor.c  sc031_sensor.c
sensors/test/: CMakeLists.txt  cam_sensors_test.c
sensors/vcm/: cam_vcm.c  cam_vcm.h  dw9714_vcm.c  dw9763_vcm.c  gt9772_vcm.c
(+74 files in other folders)
